@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 15:39:04 brook Exp $
+
+SHA1 (R/bayesm_3.1-3.tar.gz) = 98e60c5c3f81139d22de27fcbe06172bdfba10b5
+RMD160 (R/bayesm_3.1-3.tar.gz) = f8288e802fa3dfe4e9d8a6d731469ff8ae5d0c96
+SHA512 (R/bayesm_3.1-3.tar.gz) = c55892113ae6af3b9c626870b7de30f90c81dff446dc997da1b938a69c76960e71f25f86e62614125ab2709ce22c953013f8963a2b93afe7db08a56163f7c21d
+Size (R/bayesm_3.1-3.tar.gz) = 2269029 bytes
